--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,36 @@
 // TODO
+.container {
+  max-width: 1120px;
+  margin: 0 auto;
+  padding: 0 2rem;
+}
+
+.post {
+  max-width: 720px;
+  margin: 5rem auto 0;
+
+  strong {
+    display: block;
+    font-size: 2rem;
+  }
+
+  p {
+    color: var(--gray-500);
+  }
+
+  span {
+    display: block;
+    color: var(--gray-500);
+  }
+
+  .info {
+    display: flex;
+    gap: 2.5rem;
+  }
+
+  strong,
+  p,
+  .info {
+    padding: 0.5rem;
+  }
+}
