--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,6 +2,50 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Inter';
 }
 
-// TODO
+:root {
+  --pink: #ff57b2;
+
+  --white: #f8f8f8;
+  --black: #1a1d23;
+
+  --gray-500: #bbbbbb;
+  --gray-300: #d7d7d7;
+}
+
+@media (max-width: 1080px) {
+  html {
+    font-size: 93.75%; // 15px
+  }
+}
+@media (max-width: 720px) {
+  html {
+    font-size: 87.5%; // 14px
+  }
+}
+
+body,
+strong,
+p,
+h1,
+h2,
+h3,
+span {
+  font: 400 1rem 'Inter', sans-serif;
+}
+
+button {
+  cursor: pointer;
+}
+
+body {
+  background: var(--black);
+  color: var(--white);
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
