css header done

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,7 +1,10 @@
 .header {
   max-width: 1120px;
-  margin-top: 2rem;
+  margin: 0 auto;
   padding: 0 2rem;
 }
-
+.image {
+  max-width: 720px;
+  margin: 2.5rem auto 0;
+}
 // TODO
