styles done overall

--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -34,4 +34,13 @@
   .info {
     padding: 0.5rem 0;
   }
+
+  .loadMore {
+    background: none;
+    border: none;
+    margin-top: 1.5rem;
+    font-size: 1rem;
+    font-weight: 400;
+    color: var(--pink);
+  }
 }
