--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,40 @@
-// TODO
+.container {
+  max-width: 100vw;
+  //   border: 1px pink solid;
+  img {
+    margin-top: 2rem;
+    width: 100%;
+    height: auto;
+  }
+}
+
+.content {
+  padding: 0 2rem;
+  margin: 2rem auto;
+  max-width: 720px;
+
+  .header {
+    text-align: center;
+    margin-top: 2rem;
+    h1 {
+      font-size: 2.5rem;
+      font-weight: 600;
+    }
+
+    span {
+      font-size: 0.75rem;
+      color: var(--gray-300);
+    }
+
+    .info {
+      display: flex;
+      justify-content: center;
+      gap: 1rem;
+    }
+  }
+
+  h2 {
+    font-size: 1.55rem;
+    font-weight: 600;
+  }
+}
