--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,6 +1,5 @@
 .container {
   max-width: 100vw;
-  //   border: 1px pink solid;
   img {
     margin-top: 2rem;
     width: 100%;
@@ -9,12 +8,10 @@
 }
 
 .content {
-  padding: 0 2rem;
   margin: 2rem auto;
   max-width: 720px;
 
   .header {
-    text-align: center;
     margin-top: 2rem;
     h1 {
       font-size: 2.5rem;
@@ -22,13 +19,16 @@
     }
 
     span {
-      font-size: 0.75rem;
+      display: flex;
+      gap: 8px;
+      font-size: 0.9rem;
       color: var(--gray-300);
     }
 
     .info {
+      margin-top: 0.5rem;
       display: flex;
-      justify-content: center;
+      justify-content: start;
       gap: 1rem;
     }
   }
