--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,5 +1,6 @@
 .container {
-  max-width: 100vw;
+  max-width: 1120px;
+
   img {
     margin-top: 2rem;
     width: 100%;
@@ -8,6 +9,8 @@
 }
 
 .content {
+  padding: 0 2rem;
+
   margin: 2rem auto;
   max-width: 720px;
 
